[package]
name = "plygnd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "threads"
path = "src/threads.rs"

[dependencies]

[[bin]]
name = "ref-deref"
path = "src/ref-deref.rs"

[[bin]]
name = "array"
path = "src/array.rs"

[[bin]]
name = "lifetime"
path = "src/lifetime.rs"

[[bin]]
name = "atomics_locks_threads"
path = "src/atomics_locks/threads.rs"

[[bin]]
name = "atomics_locks_atomics"
path = "src/atomics_locks/atomics.rs"
